# ribbitdump

./: .gitignore  CMakeLists.txt  README.md
cmake/: showoptions.cmake
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/libcurl/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
sampleconfigs/: config.cfg  config_template.cfg  discord.cfg  discord_template.cfg
sql/: create_table.sql
src/: CMakeLists.txt
src/ribbitdump/: CMakeLists.txt  MySQLConnection.cpp  MySQLConnection.h  Requester.cpp  Requester.h  RibbitRequestData.h  main.cpp
src/shared/: CMakeLists.txt  Defines.h  DiscordHook.cpp  DiscordHook.h
